--- a/k8/deployment.yaml
+++ b/k8/deployment.yaml
@@ -24,7 +24,7 @@ spec:
             memory: 512Mi
         env:
         - name: wazuh_manager
-          value: ""
+          value: "192.168.0.63"
         - name: SYSDIG_SKIP_LOAD
           value: "true"
         volumeMounts:
